--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
 <HTML>
-This is my 1st file.
+<head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
+<script src="calcul.js"> </script>
+</head>
+<body>
+<div class="container"> 
+
+<div class="card">
+  <div class="card-header">
+    Modern Calculator
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Modern Calculator 2.0</h5>
+    <p class="card-text">This modern calculator is blazing fast and can compete super computer.</p>
+    <a href="https://itsanubhavanand.github.io/calcul.html" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+</div>
+
+</body>
 </HTML>
