Updating the files
Updating the files

--- a/calcul.html
+++ b/calcul.html
@@ -7,7 +7,7 @@
 <script src="calcul.js"> </script>
 </head>
 <body>
-<div class="container"> 
+<div class="container p-3 mb-2 bg-success text-white"> 
 <h2> Calculator </h2>
 
 <label for="num1">Number 1</label>
@@ -24,7 +24,7 @@
 <br>
 
 <button type="button" class="btn btn-primary" onclick="add()">Add</button>
-<button type="button" class="btn btn-success" onclick="sub()">Subtract</button>
+<button type="button" class="btn btn-secondary" onclick="sub()">Subtract</button>
 <button type="button" class="btn btn-danger" onclick="multi()">Multiply</button>
 <button type="button" class="btn btn-warning" onclick="divide()">Divide</button>
 
