--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script src="calcul.js"> </script>
 </head>
-<body>
+<body class="p-3 mb-2 bg-light text-white">
 <div class="container"> 
 
-<div class="card">
+<div class="card p-3 mb-2 bg-primary text-white">
   <div class="card-header">
     Modern Calculator
   </div>
-  <div class="card-body">
+  <div class="card-body p-3 mb-2 bg-info text-white">
     <h5 class="card-title">Modern Calculator 2.0</h5>
     <p class="card-text">This modern calculator is blazing fast and can compete super computer.</p>
-    <a href="https://itsanubhavanand.github.io/calcul.html" class="btn btn-primary">Go somewhere</a>
+    <a href="https://itsanubhavanand.github.io/calcul.html" class="btn btn-primary">Launch Calculator</a>
   </div>
 </div>
 
