Updating Employee details
Updating Employee details

--- a/data1.html
+++ b/data1.html
@@ -6,7 +6,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script src="data1.js"> </script>
 </head>
-<body  class="container p-3 mb-2 bg-info text-white">
+<body  class="container p-3 mb-2 bg-light text-white">
 
 <h2 class="p-3 mb-2 bg-danger text-white"> Employee Details </h2>
 
@@ -17,16 +17,13 @@
 <button type="button" class="btn btn-warning" onclick="showEmp3()">Show Odd Employee Details</button>
 
 <button type="button" class="btn btn-danger" onclick="clear1()">Clear</button>
+
 <br> <br>
 
-<div class="input-group">
-  <div class="form-outline">
-    <input type="search" id="form1" class="form-control" />
-   
-  <button type="button" class="btn btn-success" onclick="fiind()">
-     Search
-  </button>
-</div>					
+<input type="text" id="num1"> </input>
+<button type="button" class="btn btn-link" onclick="fiind()">Search</button>
+
+				
 				<hr>		
 
 <div >
