--- a/index.html
+++ b/index.html
@@ -7,9 +7,31 @@
 <script src="calcul.js"> </script>
 </head>
 <body class="p-3 mb-2 bg-light text-white">
+
+
+
+<div class="p-3 mb-2 bg-primary text-white"> 
+</h1> WELCOME TO ITSANUBHAVANAND </h1>
+</div>
+
+<br> <br> <br> <br>
+
+
 <div class="container"> 
 
-<div class="card p-3 mb-2 bg-primary text-white">
+<!--<style type="text/css">
+    #element1 {float:left;}
+    #element2 {float:right;}
+</style>
+
+<div id="element1">
+    element 1 markup
+</div>
+<div id="element2">
+    element 2 markup
+</div>-->
+
+<div class="card p-3 mb-2 bg-primary text-white"  id="element1">
   <div class="card-header">
     Modern Calculator
   </div>
@@ -20,7 +42,22 @@
   </div>
 </div>
 
+<br> <br> <br> <br>
+
+<div class="card p-3 mb-2 bg-primary text-white" id ="element2">
+  <div class="card-header">
+    MirKeta Employee Details
+  </div>
+  <div class="card-body p-3 mb-2 bg-info text-white">
+    <h5 class="card-title">Employee Details</h5>
+    <p class="card-text">See all the employee details of Mirketa Inc.</p>
+    <a href="https://itsanubhavanand.github.io/data1.html" class="btn btn-primary">Let's Go</a>
+  </div>
 </div>
+
+</div>
+
+
 
 </body>
 </HTML>
