--- a/Journ24.html
+++ b/Journ24.html
@@ -6,7 +6,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script src="calcul.js"> </script>
 </head>
-<body class="container p-3 mb-2 bg-success text-white">
+<body class="card-body p-3 mb-2 bg-info text-white">
 <div > 
 <h2> Salesforce Training On 24th Feb 2022 </h2>
 <p>
