--- a/Journ24.html
+++ b/Journ24.html
@@ -19,7 +19,7 @@
   <li>I also learnt about Object, Apps and Tabs.</li>
   <li>The first day was too exciting that it left me wanting for more in the end.</li>
   <li>Didn't really feel when 4 hours passsed, is the testimony that how much I enjoyed it.</li>
-  <li> I have also got an assigment to do which I'll try my best to cmpletet by today.</li>
+  <li> I have also got an assigment to do which I'll try my best to complete by today.</li>
   
 </ul>
 </p>
