--- a/Journ.html
+++ b/Journ.html
@@ -11,7 +11,7 @@
 
 
 <div class="p-3 mb-2 bg-primary text-white"> 
-</h1> WELCOME TO ITSANUBHAVANAND </h1>
+</h1> WELCOME TO SALESFORCE DEVELOPMENT TUTORIAL </h1>
 </div>
 
 <br> <br> <br> <br>
@@ -23,14 +23,14 @@
 
 <div class="card p-3 mb-2 bg-primary text-white"  id="element1">
   <div class="card-header">
-    
-	My Diary (Part 1)
+    Salesforce Training - 24/02/2022
+	
   </div>
   <div class="card-body p-3 mb-2 bg-info text-white">
-    <h5> Salesforce training- 24-feb-2022 </h5>
-    <p class="card-text">Hi, I have put my feelings in words about my first class on Salesforce</p> 
+    <h5> Day 1 </h5>
+    <p class="card-text">Topics: Introduction to Salesforce, Cloud Computings, Lightening apps, Objects, Tabs, Personal information, Company Information etc... </p> 
 	
-    <a href="https://itsanubhavanand.github.io/Journ24.html" class="btn btn-primary">Get an Insight</a>
+    <a href="https://itsanubhavanand.github.io/Journ24.html" class="btn btn-primary">Start Learning</a>
   </div>
 </div>
 
