--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     element 2 markup
 </div>-->
 
-<div class="card p-3 mb-2 bg-primary text-white"  id="element1">
+<div class="card p-3 mb-2 bg-primary text-white">
   <div class="card-header">
     Modern Calculator
   </div>
@@ -42,9 +42,9 @@
   </div>
 </div>
 
-<br> <br> <br> <br>
+<br> <br> <br> 
 
-<div class="card p-3 mb-2 bg-primary text-white" id ="element2">
+<div class="card p-3 mb-2 bg-primary text-white">
   <div class="card-header">
     MirKeta Employee Details
   </div>
@@ -55,7 +55,24 @@
   </div>
 </div>
 
+
+<br><br><br>
+<div class="card p-3 mb-2 bg-primary text-white" ">
+  <div class="card-header">
+    
+	My Diary
+  </div>
+  <div class="card-body p-3 mb-2 bg-info text-white">
+    <h5> Salesforce training </h5>
+    <p class="card-text">You can Get some top quality Salesforce training here. </p> 
+	
+    <a href="https://itsanubhavanand.github.io/Journ.html" class="btn btn-primary">Get an Insight</a>
+  </div>
 </div>
+
+</div>
+
+
 
 
 
