--- a/Journ24.html
+++ b/Journ24.html
@@ -7,6 +7,27 @@
 <script src="calcul.js"> </script>
 </head>
 <body class="card-body p-3 mb-2 bg-info text-white">
+
+<div > 
+<h2> Salesforce Training On 25th Feb 2022 </h2>
+<p>
+	<ul>
+  <li>Today I Learnt Basics of salesforce</li>
+  <li>The trainer was Ankita from almamate.</li>
+  <li>She was very polite and friendly as she was taking even the silliest of doubts so positively.</li>
+  <li>Today I got to know few things more throughly.</li>
+  <li>I learnt about how to manage Personal Information and Comapany Information in salesforce.</li>
+  <li>I also learnt about Object, Apps and Tabs.</li>
+  <li>The first day was too exciting that it left me wanting for more in the end.</li>
+  <li>Didn't really feel when 4 hours passsed, is the testimony that how much I enjoyed it.</li>
+  <li> I have also got an assigment to do which I'll try my best to complete by today.</li>
+  
+</ul>
+</p>
+
+</div>
+ 
+ 
 <div > 
 <h2> Salesforce Training On 24th Feb 2022 </h2>
 <p>
