--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   </div>
   <div class="card-body p-3 mb-2 bg-info text-white">
     <h5> Salesforce training </h5>
-    <p class="card-text">You can Get some top quality Salesforce training here. </p> 
+    <p class="card-text">Get a Glimpse of how I felt in today's training. </p> 
 	
-    <a href="https://itsanubhavanand.github.io/Journ.html" class="btn btn-primary">Get an Insight</a>
+    <a href="https://itsanubhavanand.github.io/Journ24.html" class="btn btn-primary">Get an Insight</a>
   </div>
 </div>
 
