--- a/Journ24.html
+++ b/Journ24.html
@@ -8,17 +8,17 @@
 </head>
 <body class="card-body p-3 mb-2 bg-info text-white">
 
-<div > 
+<div class="container p-3 mb-2 bg-success text-white"> 
 <h2> Salesforce Training On 25th Feb 2022 </h2>
 <p>
 	<ul>
-  <li>Today I Learnt Basics of salesforce</li>
-  <li>The trainer was Ankita from almamate.</li>
-  <li>She was very polite and friendly as she was taking even the silliest of doubts so positively.</li>
+  <li>Today I Learnt about Fields in Salesforce object</li>
+  <li>We did a lot of hands-on on Formula fields. </li>
+  <li>Today I learnt how to change names of even standared objects.</li>
   <li>Today I got to know few things more throughly.</li>
-  <li>I learnt about how to manage Personal Information and Comapany Information in salesforce.</li>
+  
   <li>I also learnt about Object, Apps and Tabs.</li>
-  <li>The first day was too exciting that it left me wanting for more in the end.</li>
+  <li>The 2nd day was even more exciting that it left me wanting for more in the end.</li>
   <li>Didn't really feel when 4 hours passsed, is the testimony that how much I enjoyed it.</li>
   <li> I have also got an assigment to do which I'll try my best to complete by today.</li>
   
@@ -26,9 +26,11 @@
 </p>
 
 </div>
+
+<br><br>
  
  
-<div > 
+<div class="container p-3 mb-2 bg-success text-white"> 
 <h2> Salesforce Training On 24th Feb 2022 </h2>
 <p>
 	<ul>
