--- a/Journ24.html
+++ b/Journ24.html
@@ -9,6 +9,26 @@
 <body class="card-body p-3 mb-2 bg-info text-white">
 
 <div class="container p-3 mb-2 bg-success text-white"> 
+<h2> Salesforce Training On 28th Feb 2022 </h2>
+<p>
+	<ul>
+  <li>Today I Learnt about Relationsips in salesforce</li>
+  <li>We did a lot of hands-on on Vallidation and Roll-up. </li>
+  <li>Today I got to know few things more throughly.</li>
+  
+  <li>We have got a lot of assinment to submit by tomorrow.</li>
+  
+  <li>Didn't really feel when 4 hours passsed, is the testimony that how much I enjoyed it.</li>
+  <li> Feeling more confident about configuration after today's class.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white"> 
 <h2> Salesforce Training On 25th Feb 2022 </h2>
 <p>
 	<ul>
