--- a/Journ24.html
+++ b/Journ24.html
@@ -9,6 +9,48 @@
 <body class="card-body p-3 mb-2 bg-info text-white">
 
 <div class="container p-3 mb-2 bg-success text-white"> 
+<h2> Salesforce Training On 3rd March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with Automation processes.</li>
+  <li>Finished the process buider in the starting.  </li>
+  <li>Then we moved to Flow builder.</li>
+  
+  <li>We learnt what flow builder is and why its better than rest. </li>
+  
+  <li>We deveoped screen flow to create quick forms for object creation. </li>
+  <li> Also saw other type of flows like Record-Triggered flow. </li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+<h2> Salesforce Training On 2nd March 2022 </h2>
+<p>
+	<ul>
+  <li>Today I Learnt about page layouts.</li>
+  <li>We also saw how Record type works and what are its application.  </li>
+  <li>We learnt about compact layouts and its usefullness. </li>
+  
+  <li>We have started with Automation processes in salesforce.</li>
+  
+  <li>We did hands-on on Workflow rules.</li>
+  <li> We also learnt ow to create processes.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
+<div class="container p-3 mb-2 bg-success text-white"> 
 <h2> Salesforce Training On 28th Feb 2022 </h2>
 <p>
 	<ul>
