--- a/Journ24.html
+++ b/Journ24.html
@@ -9,6 +9,28 @@
 <body class="card-body p-3 mb-2 bg-info text-white">
 
 <div class="container p-3 mb-2 bg-success text-white"> 
+
+
+<h2> Salesforce Training On 4th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with Sharing settings.</li>
+  <li>Finished sharing setting and headed with Data Management.  </li>
+  <li>We learnt how to use Data Import Wizard and Export Wizard.</li>
+  
+  <li>We learnt how to use Data Loader and how its different with Wizard</li>
+  
+  <li>We saw all type of reports.</li>
+  <li> Also saw how to create and manage Dashboard.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white">
 <h2> Salesforce Training On 3rd March 2022 </h2>
 <p>
 	<ul>
@@ -48,6 +70,9 @@
 </div>
 
 <br><br>
+
+
+
 
 
 <div class="container p-3 mb-2 bg-success text-white"> 
