--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,28 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 7th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with Configuration.</li>
+  <li>Finished Configuration with Chatter as Last topic.  </li>
+  <li>We learnt about OOPS and its implimentations.</li>
+  
+  <li>We learnt about Apex, Variables, Function and all.</li>
+  
+  <li>We saw the implementation of all the pillars of OOPs in Apex.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 4th March 2022 </h2>
 <p>
 	<ul>
