--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,27 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 8th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with Apex.</li>
+  <li>Finished OOps  </li>
+  <li>We learnt about SObject.</li>
+  
+  <li>We learnt How to fetch records from Salesforce</li>
+  
+  <li>We saw how SOQL works.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 7th March 2022 </h2>
 <p>
 	<ul>
