--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,28 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 10th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with Apex.</li>
+  <li>We learnt about DML Operations.</li>
+  <li>We learnt about SOQL and SOSL</li>
+  
+  <li>We learnt about transaction.</li>
+  
+  <li>We also saw how we can perform DML operations in Partial Transaction mode.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 8th March 2022 </h2>
 <p>
 	<ul>
