--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,27 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 14th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we installed Java and ANT in our syetems.</li>
+  <li>As always Ghanshyam sir promised to take the class but eventually didn't.</li>
+  <li>Then udhay sir come to our fore and helped us step by step, how to install the things.</li>
+  
+  <li>Everyone installed java version 11 but I resited with 8 as I was too lazy to install it again.</li>
+  
+  <li>Ant is still an Alien, someday Ghanshyam sir will take our class and explain what it is.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 10th March 2022 </h2>
 <p>
 	<ul>
