--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,27 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 15th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we learnt Trigers in Apex</li>
+  <li>I learnt almost all type of triggers in a nutshell.</li>
+  <li>Ankita ma'am went a littly pacy with the triggers as she almost completed all type of triggers by today only.</li>
+  
+  <li>I have got a lot of assignment to do related triggers.</li>
+  
+  <li>My target is to finish up triggers by today so that I could be in a better poaition tomorrow.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 14th March 2022 </h2>
 <p>
 	<ul>
