--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,28 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 21st March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we learnt VisualForce.</li>
+  <li>I learnt almost all type of controllers.</li>
+  <li>Custom controller was completed yesterday only.</li>
+  
+  <li>Today we started with Standared controller and List Standared Controller.</li>
+  
+  <li>We also saw how to use AjAX.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 15th March 2022 </h2>
 <p>
 	<ul>
