--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,46 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 24th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we learnt Apex Deployement.</li>
+  <li>We created sandboxes for development. </li>
+  <li> Used Changesets for deployment.</li>
+  
+  <li>Also cleared some doubts regarding project.</li>
+  
+  <li></li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
+<h2> Salesforce Training On 23rd March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we finished Controllers.</li>
+  <li>Also did Apex Testing.</li>
+  <li>created Test classes and did code coverage.</li>
+  
+  <li>Our project submission got delayed by a day.</li>
+  
+  <li>We starterd with Deployment.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 21st March 2022 </h2>
 <p>
 	<ul>
