--- a/Journ24.html
+++ b/Journ24.html
@@ -11,6 +11,48 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 30th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with Aura.</li>
+  <li> I was done with the task I got yesterday. </li>
+  <li> My calculator in Aura was fully functional.</li>
+  
+  <li>It was Little boring but important class..</li>
+  
+ 
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
+<h2> Salesforce Training On 29th March 2022 </h2>
+<p>
+	<ul>
+  <li>Today we started with Aura Framework.</li>
+  <li>Got a basic idea that what's aura and why Aura. </li>
+  <li> Learnt to create aura compoents and how to call it in application.</li>
+  
+  <li>Got a task to develop a calculator with Aura.</li>
+  
+ 
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 24th March 2022 </h2>
 <p>
 	<ul>
