--- a/Journ24.html
+++ b/Journ24.html
@@ -6,6 +6,30 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script src="calcul.js"> </script>
 </head>
+
+<body class="card-body p-3 mb-2 bg-info text-white">
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
+<h2> Salesforce Training On 1st April 2022 </h2>
+<p>
+	<ul>
+  <li>Today we started with LWC.</li>
+  <li> Everyone among us wanted a break but ... </li>
+  <li> Since LWC is something I have to work with in future, I was more focused.</li>
+  
+  <li>Today I set up my VSCode and Salesforce CLI.</li>
+  <li>It was an exciting day to summarize.</li>
+  
+ 
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
 <body class="card-body p-3 mb-2 bg-info text-white">
 
 <div class="container p-3 mb-2 bg-success text-white"> 
