--- a/Journ24.html
+++ b/Journ24.html
@@ -12,6 +12,30 @@
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
+<h2> Salesforce Training On 4th April 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with LWC.</li>
+  <li> We learn't a lot of topics today that I,m not even able to recall them to list here. </li>
+  <li> Custom Label was the last topic that we learnt..</li>
+  
+  <li>Also learnt how to use @Track and @api</li>
+  <li>parent and child communication, we covered majorly. </li>
+  
+ 
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<body class="card-body p-3 mb-2 bg-info text-white">
+
+<div class="container p-3 mb-2 bg-success text-white"> 
+
+
 <h2> Salesforce Training On 1st April 2022 </h2>
 <p>
 	<ul>
