--- a/Journ24.html
+++ b/Journ24.html
@@ -9,6 +9,27 @@
 
 <body class="card-body p-3 mb-2 bg-info text-white">
 
+
+<div class="container p-3 mb-2 bg-success text-white">
+
+<h2> Salesforce Training On 5th April 2022 </h2>
+<p>
+	<ul>
+  <li>Today we continued with LWC.</li>
+  <li> We learnt life cycle hooks. <li>
+  <li> Also discussed Staic resources.</li>
+  
+  <li>Just came to know that LWC Project is alotted.</li>
+  <li>Its time to pace my LWC learning. </li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
 <div class="container p-3 mb-2 bg-success text-white"> 
 
 
