--- a/Journ24.html
+++ b/Journ24.html
@@ -9,6 +9,25 @@
 
 <body class="card-body p-3 mb-2 bg-info text-white">
 
+<div class="container p-3 mb-2 bg-success text-white">
+
+<h2> Salesforce Training On 8th April 2022 </h2>
+<p>
+	<ul>
+	<li> I revised and practised LWC in these 2 days off. </li>
+  <li>Today we agin continued with LWC.</li>
+  
+  <li> Was able to grasp more today.</li>
+  
+  <li> Today we learnt How to access apex class using LWC.</li>
+  <li>We also saw imperative calls. </li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
 
 <div class="container p-3 mb-2 bg-success text-white">
 
@@ -16,10 +35,9 @@
 <p>
 	<ul>
   <li>Today we continued with LWC.</li>
-  <li> We learnt life cycle hooks. <li>
+  <li> We learnt life cycle hooks. </li>
   <li> Also discussed Staic resources.</li>
-  
-  <li>Just came to know that LWC Project is alotted.</li>
+   <li>Just came to know that LWC Project is alotted.</li>
   <li>Its time to pace my LWC learning. </li>
   
 </ul>
