--- a/Journ24.html
+++ b/Journ24.html
@@ -9,13 +9,35 @@
 
 <body class="card-body p-3 mb-2 bg-info text-white">
 
+
+<div class="container p-3 mb-2 bg-success text-white">
+
+<h2> Salesforce Training On 11th April 2022 </h2>
+<p>
+	<ul>
+	<li> Started freshly after a much needed weekend break. </li>
+  <li>we continued with LWC.</li>
+  
+  <li> Got our project submission day shifted by a couple of days.</li>
+  
+  <li> Learnt about Component communication in LWC.</li>
+  <li>Went through lightning data services to access salesforce data </li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+
 <div class="container p-3 mb-2 bg-success text-white">
 
 <h2> Salesforce Training On 8th April 2022 </h2>
 <p>
 	<ul>
 	<li> I revised and practised LWC in these 2 days off. </li>
-  <li>Today we agin continued with LWC.</li>
+  <li>Today we again continued with LWC.</li>
   
   <li> Was able to grasp more today.</li>
   
