--- a/Journ24.html
+++ b/Journ24.html
@@ -12,6 +12,27 @@
 
 <div class="container p-3 mb-2 bg-success text-white">
 
+<h2> Salesforce Training On 12th April 2022 </h2>
+<p>
+	<ul>
+	
+  <li>Continued with LWC.</li>
+  
+  <li> Today I learnt communication from parent to child </li>
+  
+  <li> Also saw the child to parent communication.</li>
+  <li>Followed by communication between two unrelated lwc components. </li>
+  <li>Nothing much to say for today.</li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
+
+<div class="container p-3 mb-2 bg-success text-white">
+
 <h2> Salesforce Training On 11th April 2022 </h2>
 <p>
 	<ul>
