--- a/Journ24.html
+++ b/Journ24.html
@@ -9,6 +9,28 @@
 
 <body class="card-body p-3 mb-2 bg-info text-white">
 
+<div class="container p-3 mb-2 bg-success text-white">
+
+<h2> Salesforce Training On 19th April 2022 </h2>
+<p>
+	<ul>
+	
+  <li>Today I submitted and presented my Project along with my team.</li>
+  
+  <li> Feeling dissapointed with myself. </li>
+  
+  <li> I along with my team underperformed as per the bar we set for ourselves.</li>
+  <li> Took the project too lightly and this overconfidence left us a lot to do in a little time.  </li>
+  <li> Styling (LDS and CSS) was again our weakness as was the case in the last project. </li>
+   <li> A lot of learnings to be taken from this project.</li>
+   <li> Jumping on PD01 prepeartion. </li>
+  
+</ul>
+</p>
+
+</div>
+
+<br><br>
 
 <div class="container p-3 mb-2 bg-success text-white">
 
